--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -80,9 +80,8 @@ server {
         access_log off;
     }
 
-    # API rate limiting (adjust as needed for production)
+    # API routes
     location /api/ {
-        limit_req zone=api burst=10 nodelay;
         try_files $uri /index.php$is_args$args;
     }
 
@@ -92,9 +91,4 @@ server {
     location = /50x.html {
         root /usr/share/nginx/html;
     }
-}
-
-# Rate limiting zones
-http {
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 }
