--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,38 +1,12 @@
 when@dev:
     monolog:
+        channels: ['app.api', 'app.binance', 'app.scheduler']
         handlers:
             main:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
                 channels: ["!event"]
-            
-            # Console output for commands
-            console:
-                type: console
-                process_psr_3_messages: false
-                channels: ["!event", "!doctrine", "!console"]
-
-            # Separate file for API requests
-            api:
-                type: stream
-                path: "%kernel.logs_dir%/api.log"
-                level: info
-                channels: ["app.api"]
-
-            # Separate file for Binance API calls
-            binance:
-                type: stream
-                path: "%kernel.logs_dir%/binance.log"  
-                level: info
-                channels: ["app.binance"]
-
-            # Separate file for scheduler tasks
-            scheduler:
-                type: stream
-                path: "%kernel.logs_dir%/scheduler.log"
-                level: info
-                channels: ["app.scheduler"]
 
 when@test:
     monolog:
@@ -50,54 +24,16 @@ when@test:
 
 when@prod:
     monolog:
+        channels: ['app.api', 'app.binance', 'app.scheduler']
         handlers:
             main:
                 type: fingers_crossed
                 action_level: error
                 handler: nested
                 excluded_http_codes: [404, 405]
-                buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+                buffer_size: 50
             nested:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
-                formatter: monolog.formatter.json
-                
-            # Error-specific logging in production
-            error:
-                type: stream
-                path: "%kernel.logs_dir%/error.log"
-                level: error
-                formatter: monolog.formatter.json
-
-            # Performance and monitoring logs
-            performance:
-                type: stream
-                path: "%kernel.logs_dir%/performance.log"
-                level: info
-                channels: ["app.performance"]
-                formatter: monolog.formatter.json
-
-            # API access logs
-            api_access:
-                type: stream
-                path: "%kernel.logs_dir%/api_access.log"
-                level: info
-                channels: ["app.api"]
-                formatter: monolog.formatter.json
-
-            # External API monitoring
-            external_api:
-                type: stream
-                path: "%kernel.logs_dir%/external_api.log"
-                level: info
-                channels: ["app.binance"]
-                formatter: monolog.formatter.json
-
-            # Scheduler task monitoring  
-            scheduler:
-                type: stream
-                path: "%kernel.logs_dir%/scheduler.log"
-                level: info
-                channels: ["app.scheduler"]
                 formatter: monolog.formatter.json
