--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,11 +10,14 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    # Gzip compression
+    # Enhanced Gzip compression for better performance
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_comp_level 6;
+    gzip_proxied any;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
     gzip_types
         text/plain
         text/css
@@ -23,7 +26,10 @@ server {
         application/json
         application/javascript
         application/xml+rss
-        application/atom+xml;
+        application/atom+xml
+        application/x-javascript
+        text/x-component
+        text/x-js;
 
     # Main location block
     location / {
@@ -46,9 +52,18 @@ server {
 
         # Performance optimizations
         fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
+        fastcgi_buffers 8 256k;
+        fastcgi_busy_buffers_size 512k;
         fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
+        
+        # Cache fastcgi responses
+        fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=api_cache:10m max_size=100m inactive=60m;
+        fastcgi_cache api_cache;
+        fastcgi_cache_valid 200 5m;
+        fastcgi_cache_use_stale error timeout invalid_header updating http_500;
+        fastcgi_cache_bypass $http_pragma $http_authorization;
         
         internal;
     }
