--- a/docker/php/php-prod.ini
+++ b/docker/php/php-prod.ini
@@ -25,17 +25,18 @@ session.cookie_httponly = 1
 session.cookie_secure = 1
 session.use_strict_mode = 1
 
-; OPcache (enabled for production)
+; OPcache (optimized for production)
 opcache.enable = 1
 opcache.enable_cli = 0
-opcache.memory_consumption = 256
-opcache.interned_strings_buffer = 16
+opcache.memory_consumption = 512
+opcache.interned_strings_buffer = 32
 opcache.max_accelerated_files = 20000
 opcache.max_wasted_percentage = 5
 opcache.use_cwd = 1
 opcache.validate_timestamps = 0
 opcache.revalidate_freq = 0
 opcache.save_comments = 0
+opcache.optimization_level = 0x7FFFBFFF
 
 ; Realpath cache
 realpath_cache_size = 4096K
