refactor: extract business logic from controllers to dedicated service layer

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,6 +32,18 @@ services:
         arguments:
             $logger: '@monolog.logger.app.binance'
             
+    App\Service\RateService:
+        arguments:
+            $logger: '@monolog.logger.app.api'
+            
+    App\Service\ValidationService:
+        arguments:
+            $logger: '@monolog.logger.app.api'
+            
+    App\Service\HealthCheckService:
+        arguments:
+            $logger: '@monolog.logger.app.api'
+            
     App\Command\FetchRatesCommand:
         arguments:
             $logger: '@monolog.logger.app.scheduler'
